--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -333,7 +333,7 @@ margin-left: -13px !important
   
 }
 
-.bars{
+.mobile-nav i{
   font-size:2.3rem;
   font-weight: 500;
   color:var(--blue-black)
